data-ingestion added

--- a/notebook/mongoDB.ipynb
+++ b/notebook/mongoDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f464cb20",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "52fd7486",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ab9a2288",
    "metadata": {},
    "outputs": [],
@@ -181,13 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "de7e394f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB_NAME = \"vehicle-insurance\"\n",
-    "COLLECTION_NAME = \"insurance-Data\"\n",
+    "DB_NAME = \"Proj1\"\n",
+    "COLLECTION_NAME = \"Proj1-Data\"\n",
     "CONNECTION_URL = \"mongodb+srv://dhaivatjambudia:4hiavhO0mSDfj31a@cluster0.amk1djl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
     "\n",
     "# above, either remove your credentials or delete the mongoDB resource bofore pushing it to github."
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "8ee60eea",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "2faee521",
    "metadata": {},
    "outputs": [],
